--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.8.0",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
